docs/i18n/ro/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Scurtături"
sidebar_position: 2
---

Există câteva comenzi rapide pe care le poți folosi în editor. Unele dintre ele sunt scrise sub butoane.

## Generalități

* `Ctrl` + `N`: Fișier nou
* `Ctrl` + `Shift` + `N`: Fișier nou din șablon
* `Ctrl` + `O`: Deschide fișier
* `Ctrl` + `I`: Fișier de import
* `Ctrl` + `E`: Fișier export
* `Ctrl` + `Shift` + `E`: Export fișier ca imagine
* `Ctrl` + `Alt` + `E`: Export fișier svg
* `Ctrl` + `Alt` + `S`: Deschideți setările

## Proiect

* `Ctrl` + `Z`: Anulare
* `Ctrl` + `Y`: Redo
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Setări deschidere proiect
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Deschide paleta de culori
* `Ctrl` + `B`: Deschide dialogul de fundal
* `Ctrl` + `Shift` + `A`: Dialog zone deschise
* `Ctrl` + `L`: Deschidere dialog straturi
* `Ctrl` + `S`: Salvare
* `Alt` + `S`: Schimbare cale

## Stylus

* `Butonul principal`: Schimbă cu unealta manuală
* `Butonul Secundar`: Schimbă la al doilea pictor
